Fixed footer spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -247,7 +247,7 @@ a {
 
 .footer{
   width: 100%;
-  height: 40px;
+  height: 45px;
   padding-bottom: 25px;
   background: #823296;
 }
@@ -258,18 +258,16 @@ a {
 }
 
 .footer-content{
-  position: absolute;
-  display: inline;
-  left: 11px;
+  margin-left: 0%;
   width: 100%;
   padding-top: 12px;
 }
 
 .footer-content * {
   font-size: 0.7rem;
-  margin-left: 1.3%;
-  margin-right:2%;
+  margin-right: 1%;
   display: inline;
+  margin-left: 2%;
 }
 
 .social-section-footer{
